--- a/Greenie-assesment/src/App.css
+++ b/Greenie-assesment/src/App.css
@@ -1,10 +1,10 @@
 .container {
-  background-color: #e0e3ef;
+  background-color: #c9d9e4;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  border-radius: 12px;
+  border-radius: 5px;
 }
 
 .navbar {
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.54) 0px 3px 8px;
   padding: 7px;
   margin: 10px;
 }
@@ -26,7 +26,7 @@
   border: none;
   border-radius: 6px;
   background: transparent;
-  color: #2A2F4F;
+  color: #460870;
 
 }
 @media screen and (max-width:744px)
